@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-29T08:07:31Z",
-  "count_outdated" : 1594,
-  "uniques_outdated" : 442,
-  "count" : 1644,
-  "uniques" : 467,
+  "timestamp" : "2022-06-29T16:22:42Z",
+  "count_outdated" : 1596,
+  "uniques_outdated" : 443,
+  "count" : 1646,
+  "uniques" : 468,
   "clones" : [
-    {
-      "timestamp": "2022-06-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-16T00:00:00Z",
       "count": 2,
@@ -93,6 +86,13 @@
       "timestamp": "2022-06-28T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
